# audio2digit

./: .gitignore  .pylintrc  README.md  dvc.yaml  main.py  pyproject.toml
.dvc/: config
mlruns/992932925668860785/: meta.yaml
mlruns/992932925668860785/099f9488cd5a40ebb3afb19e87304be8/: meta.yaml
mlruns/992932925668860785/099f9488cd5a40ebb3afb19e87304be8/artifacts/: classification_report.txt
mlruns/992932925668860785/099f9488cd5a40ebb3afb19e87304be8/metrics/: test_accuracy
mlruns/992932925668860785/099f9488cd5a40ebb3afb19e87304be8/tags/: mlflow.runName  mlflow.source.name
mlruns/992932925668860785/6ac87bc7c325487d9de1623afddd4fd3/: meta.yaml
mlruns/992932925668860785/6ac87bc7c325487d9de1623afddd4fd3/artifacts/model/: digit_cnn.pth
mlruns/992932925668860785/6ac87bc7c325487d9de1623afddd4fd3/metrics/: train_accuracy  train_loss  val_accuracy  val_loss
mlruns/992932925668860785/6ac87bc7c325487d9de1623afddd4fd3/tags/: mlflow.runName  mlflow.source.git.commit  mlflow.source.name
src/: settings.py
src/ai/: predict.py  preprocessing.py  utils.py
src/ai/datasets/: __init__.py  datasets.py
src/ai/models/: baseline_cnn.py
src/ai/scripts/: evaluation.py  train.py
src/app/: app.py
src/digit_recognizer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/notebooks/: llm-coding-challenge.ipynb
