[project]
name = "digit-recognizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dagshub>=0.6.3",
    "datasets>=4.0.0",
    "dvc==3.63.0",
    "librosa>=0.11.0",
    "mlflow>=3.3.2",
    "streamlit>=1.49.1",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchcodec>=0.6.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["ai"]
